Adding notes and highlights pages

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@mdx-js/react": "^2.1.2",
+    "@sindresorhus/slugify": "^2.2.1",
     "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.0.0",
     "gatsby-plugin-image": "^3.0.0",
