--- a/package.json
+++ b/package.json
@@ -41,5 +41,12 @@
     "remark-gfm": "^4.0.0",
     "remark-wiki-link-plus": "^1.1.1",
     "styled-components": "^6.1.13"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.37.2",
+    "globals": "^15.11.0",
+    "prettier": "3.3.3"
   }
 }
