--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@deckdeckgo/highlight-code": "^3.6.0",
     "@mdx-js/react": "^2.1.2",
     "@sindresorhus/slugify": "^2.2.1",
     "@thecae/remark-obsidian": "^1.1.1",
@@ -29,14 +30,17 @@
     "gatsby-plugin-styled-components": "^6.13.1",
     "gatsby-remark-copy-linked-files": "^6.13.2",
     "gatsby-remark-double-brackets-link": "^0.1.11",
+    "gatsby-remark-highlight-code": "^3.3.0",
     "gatsby-remark-images": "^7.13.2",
     "gatsby-source-filesystem": "^5.0.0",
+    "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
+    "remark-prism": "^1.3.6",
     "remark-wiki-link-plus": "^1.1.1",
     "styled-components": "^6.1.13"
   },
