--- a/package.json
+++ b/package.json
@@ -33,14 +33,15 @@
     "gatsby-remark-highlight-code": "^3.3.0",
     "gatsby-remark-images": "^7.13.2",
     "gatsby-source-filesystem": "^5.0.0",
-    "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "remark-frontmatter": "^4.0.1",
     "remark-gfm": "^3.0.1",
+    "remark-html": "^15.0.1",
     "remark-prism": "^1.3.6",
+    "remark-torchlight": "^0.0.5",
     "remark-wiki-link-plus": "^1.1.1",
     "styled-components": "^6.1.13"
   },
